--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&family=Big+Shoulders+Display:wght@700&family=JetBrains+Mono:wght@400;500;600;700;800&family=League+Spartan:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&family=Big+Shoulders+Display:wght@700&family=JetBrains+Mono:wght@400;500;600;700;800&family=League+Spartan:wght@100;200;300;400;500;600;700;800;900&family=Lexend+Deca&display=swap');
+
+
 :root{
     --background: #F2F2F2;
     --color1: #00403F;
@@ -63,11 +67,12 @@ body{
 button{
     font-size: 19px;
     font-weight: 700;
-    letter-spacing: 2px;
+    letter-spacing: 0px;
     margin-top: 100px;
     width: 200px;
     height: 50px;
     border-radius: 30px;
+    border: 2px solid white;
     outline: 0;
     border: 0;
     cursor: pointer;
@@ -85,13 +90,17 @@ button:hover{
     margin-top: 30px;
     font-size: 35px;
     font-weight: 500;
+    font-family: 'Big Shoulders Display', sans-serif;
 }
 
 .column p{
     margin-top: 50px;
-    font-size: 20px;
+    font-size: 18px;
     justify-content: center;
     align-items: center;
+    font-family: 'Lexend Deca', sans-serif;
+    font-weight: 400;
+    color: hsla(0, 0%, 100%, 0.75);
 
 }
 
